[gd_scene load_steps=14 format=2]

[ext_resource path="res://PlacehoolderSprites/BG2.png" type="Texture" id=1]
[ext_resource path="res://Fonts/DynamicFonts/ClothesEnglish.tres" type="DynamicFont" id=2]
[ext_resource path="res://Sprites/Buttons/Windy.png" type="Texture" id=3]
[ext_resource path="res://ObjectScenes/InOverlay.tscn" type="PackedScene" id=4]
[ext_resource path="res://ObjectScenes/BackButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://DisplayScenes/WeatherMenu.gd" type="Script" id=6]
[ext_resource path="res://Sprites/Buttons/WindyHover.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Buttons/SunnyHover.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Buttons/Sunny.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Buttons/RainyHover.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Buttons/Rainy.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Buttons/Cloudy.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Buttons/CloudyHover.png" type="Texture" id=13]

[node name="WeatherMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -539.0
margin_top = -241.5
margin_right = 539.0
margin_bottom = 241.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 1078.0
margin_bottom = 79.0
custom_fonts/font = ExtResource( 2 )
text = "Weather (Cuaca)"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 83.0
margin_right = 1078.0
margin_bottom = 483.0
alignment = 1

[node name="Sunny" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 270.0
margin_bottom = 400.0
rect_min_size = Vector2( 270, 400 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="Windy" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 274.0
margin_right = 544.0
margin_bottom = 400.0
rect_min_size = Vector2( 270, 400 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 3

[node name="Cloudy" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 548.0
margin_right = 818.0
margin_bottom = 400.0
rect_min_size = Vector2( 270, 400 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 13 )
expand = true
stretch_mode = 3

[node name="Rainy" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 822.0
margin_right = 1078.0
margin_bottom = 400.0
rect_min_size = Vector2( 256, 400 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 10 )
expand = true
stretch_mode = 3

[node name="BackButton" parent="." instance=ExtResource( 5 )]
targetScene = "SubMenu"

[node name="Overlay" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="button_down" from="VBoxContainer/HBoxContainer/Sunny" to="." method="_on_Sunny_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Windy" to="." method="_on_Windy_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Cloudy" to="." method="_on_Cloudy_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Rainy" to="." method="_on_Rainy_button_down"]
